style(error-msg): restyle error message to avoid moving the user box too much

--- a/src/style.css
+++ b/src/style.css
@@ -55,6 +55,8 @@ h1 {
   align-items: center;
   justify-content: center;
   gap: 1rem;
+  height: 150px;
+  width: 210px;
 
   background-color: #267335;
   border-radius: 24px;
@@ -70,4 +72,5 @@ h1 {
 
 #error-msg {
   white-space: nowrap;
+  margin: 0;
 }
